# django-gitlab-webhooks

./: .bumpversion.cfg  README.rst  pyproject.toml  pytest.ini
.github/workflows/: release.yml  tests.yml
docs/: conf.py  index.rst  testing.rst
gitlab_webhooks/: __init__.py  apps.py  constants.py  settings.py  signals.py  urls.py  views.py
tests/: test_settings.py  test_urls.py  test_views.py
tests/test_app/: settings.py
